--- a/bloglist/package.json
+++ b/bloglist/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ./tests/ --verbose"
   },
   "author": "SJ",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "eslint": "^7.7.0"
+    "eslint": "^7.7.0",
+    "jest": "^26.4.0",
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.28"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
