--- a/bloglist/package.json
+++ b/bloglist/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.9.28"
+    "mongoose": "^5.9.28",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "jest": {
     "testEnvironment": "node"
